--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-password-strength-bar": "^0.4.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
     "react-spinners": "^0.17.0",
     "redux-persist": "^6.0.0",
